Added League Position Data

--- a/jupyter_webscraper.ipynb
+++ b/jupyter_webscraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "8608d5cb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "b253e2fe",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "93d3c4fe",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "edb5d899",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "6722564d",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "id": "a24fafc1",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        " 'Manisaspor']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "096d4739",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        " 'MKE Ankaragücü']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "5bb2afd1",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        " 'Manisaspor vs. MKE Ankaragücü']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +174,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f97a641f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"tabellenplatz\">(6.)</span>,\n",
+       " <span class=\"tabellenplatz\">(6.)</span>,\n",
+       " <span class=\"tabellenplatz\">(2.)</span>,\n",
+       " <span class=\"tabellenplatz\">(2.)</span>,\n",
+       " <span class=\"tabellenplatz\">(11.)</span>,\n",
+       " <span class=\"tabellenplatz\">(11.)</span>,\n",
+       " <span class=\"tabellenplatz\">(3.)</span>,\n",
+       " <span class=\"tabellenplatz\">(3.)</span>,\n",
+       " <span class=\"tabellenplatz\">(18.)</span>,\n",
+       " <span class=\"tabellenplatz\">(18.)</span>,\n",
+       " <span class=\"tabellenplatz\">(9.)</span>,\n",
+       " <span class=\"tabellenplatz\">(9.)</span>,\n",
+       " <span class=\"tabellenplatz\">(8.)</span>,\n",
+       " <span class=\"tabellenplatz\">(8.)</span>,\n",
+       " <span class=\"tabellenplatz\">(16.)</span>,\n",
+       " <span class=\"tabellenplatz\">(16.)</span>,\n",
+       " <span class=\"tabellenplatz\">(4.)</span>,\n",
+       " <span class=\"tabellenplatz\">(4.)</span>,\n",
+       " <span class=\"tabellenplatz\">(5.)</span>,\n",
+       " <span class=\"tabellenplatz\">(5.)</span>,\n",
+       " <span class=\"tabellenplatz\">(15.)</span>,\n",
+       " <span class=\"tabellenplatz\">(15.)</span>,\n",
+       " <span class=\"tabellenplatz\">(14.)</span>,\n",
+       " <span class=\"tabellenplatz\">(14.)</span>,\n",
+       " <span class=\"tabellenplatz\">(1.)</span>,\n",
+       " <span class=\"tabellenplatz\">(1.)</span>,\n",
+       " <span class=\"tabellenplatz\">(7.)</span>,\n",
+       " <span class=\"tabellenplatz\">(7.)</span>,\n",
+       " <span class=\"tabellenplatz\">(17.)</span>,\n",
+       " <span class=\"tabellenplatz\">(17.)</span>,\n",
+       " <span class=\"tabellenplatz\">(12.)</span>,\n",
+       " <span class=\"tabellenplatz\">(12.)</span>,\n",
+       " <span class=\"tabellenplatz\">(10.)</span>,\n",
+       " <span class=\"tabellenplatz\">(10.)</span>,\n",
+       " <span class=\"tabellenplatz\">(13.)</span>,\n",
+       " <span class=\"tabellenplatz\">(13.)</span>]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "league_positions = all[0].find_all(\"span\", {\"class\": \"tabellenplatz\"})\n",
+    "league_positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0e0abef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 2, 11, 3, 18, 9, 8, 16, 4, 5, 15, 14, 1, 7, 17, 12, 10, 13]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "position_list = []\n",
+    "\n",
+    "# Gather league positions from the site\n",
+    "for index in range(36):\n",
+    "    pos = league_positions[index]\n",
+    "    pos_num = int(''.join(x for x in pos.text.strip() if x.isdigit()))\n",
+    "    position_list.append(pos_num)\n",
+    "    \n",
+    "# Clean the position list\n",
+    "league_position_list = []\n",
+    "[league_position_list.append(x) for x in position_list if x not in league_position_list]\n",
+    "\n",
+    "league_position_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "53662be5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 9, 16, 5, 14, 7, 12, 13]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Divide the home team positions and the away team positions\n",
+    "home_positions = league_position_list[::2]\n",
+    "away_positions = league_position_list[1::2]\n",
+    "\n",
+    "# home_positions\n",
+    "away_positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e0c852",
    "metadata": {},
    "outputs": [],
    "source": []
