Added scores to the data

--- a/jupyter_webscraper.ipynb
+++ b/jupyter_webscraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8608d5cb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b253e2fe",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "93d3c4fe",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "edb5d899",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6722564d",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a24fafc1",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        " 'Manisaspor']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "096d4739",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        " 'MKE Ankaragücü']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5bb2afd1",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        " 'Manisaspor vs. MKE Ankaragücü']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "f97a641f",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        " <span class=\"tabellenplatz\">(13.)</span>]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "0e0abef4",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "[6, 2, 11, 3, 18, 9, 8, 16, 4, 5, 15, 14, 1, 7, 17, 12, 10, 13]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "53662be5",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "[2, 3, 9, 16, 5, 14, 7, 12, 13]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,8 +290,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f8e0c852",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"matchresult finished\">0:0</span>,\n",
+       " <span class=\"matchresult finished\">1:1</span>,\n",
+       " <span class=\"matchresult finished\">1:0</span>,\n",
+       " <span class=\"matchresult finished\">1:1</span>,\n",
+       " <span class=\"matchresult finished\">2:1</span>,\n",
+       " <span class=\"matchresult finished\">1:1</span>,\n",
+       " <span class=\"matchresult finished\">2:1</span>,\n",
+       " <span class=\"matchresult finished\">2:3</span>,\n",
+       " <span class=\"matchresult finished\">2:2</span>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_results = all[0].find_all(\"span\", {\"class\": \"matchresult finished\"})\n",
+    "match_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4ac2880f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 0, 1, 0, 1, 2, 0]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_list = []\n",
+    "\n",
+    "# Gather the match scores from the site\n",
+    "for index, _ in enumerate(match_results):\n",
+    "    result = match_results[index]\n",
+    "    result_text = result.text.strip()\n",
+    "    home_result, away_result = result_text.split(':')\n",
+    "    home_result = int(home_result)\n",
+    "    away_result = int(away_result)\n",
+    "    \n",
+    "    # If home result is equal to the away result we categorize the game as a draw or 0\n",
+    "    # If home result is greater than the away result we categorize the game as a win ir 1\n",
+    "    # If home result is less than the away result we categorize the game as a loss ir 2\n",
+    "    if home_result == away_result:\n",
+    "        result_list.append(0)\n",
+    "    elif home_result > away_result:\n",
+    "        result_list.append(1)\n",
+    "    else:\n",
+    "        result_list.append(2)\n",
+    "\n",
+    "result_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e12f95a",
    "metadata": {},
    "outputs": [],
    "source": []
