Added score table information

--- a/jupyter_webscraper.ipynb
+++ b/jupyter_webscraper.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d916d3",
+   "id": "cce64856",
    "metadata": {},
    "source": [
     "## Get Data From the League Table"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9092c07f",
+   "id": "47c14ac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7ac4880e",
+   "id": "62083d77",
    "metadata": {},
    "outputs": [
     {
@@ -672,21 +672,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "94112203",
+   "execution_count": 127,
+   "id": "efb29c23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tr>\n",
+       "<td class=\"rechts hauptlink\" style=\"background-color:#afd179\">1<span class=\"icons_sprite green-arrow-ten\" title=\"previous week 13.place\"> </span></td>\n",
+       "<td class=\"zentriert no-border-rechts\"><a class=\"vereinprofil_tooltip\" href=\"/gaziantepspor/spielplan/verein/524/saison_id/2005\" id=\"524\"><img alt=\"Gaziantepspor\" class=\"tiny_wappen\" src=\"https://tmssl.akamaized.net/images/wappen/tiny/524.png?lm=1408654192\" title=\" \"/></a></td>\n",
+       "<td class=\"no-border-links hauptlink\">\n",
+       "<a class=\"vereinprofil_tooltip\" href=\"/gaziantepspor/spielplan/verein/524/saison_id/2005\" id=\"524\">Gaziantepspor</a><br class=\"show-for-small\"/>\n",
+       "</td>\n",
+       "<td class=\"zentriert\">1</td>\n",
+       "<td class=\"zentriert\">1</td>\n",
+       "<td class=\"zentriert\">0</td>\n",
+       "<td class=\"zentriert\">0</td>\n",
+       "<td class=\"zentriert\">3:2</td>\n",
+       "<td class=\"zentriert\">1</td>\n",
+       "<td class=\"zentriert\">3</td>\n",
+       "</tr>"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "table = all[4].find_all(\"tr\")\n",
     "table = table[1:]\n",
-    "# table[0]"
+    "table[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "678b9a61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gaziantepspor\n",
+      "Trabzonspor\n",
+      "Galatasaray\n",
+      "Diyarbakirspor\n",
+      "Ankaragücü\n",
+      "Manisaspor\n",
+      "Besiktas\n",
+      "Denizlispor\n",
+      "Ankaraspor\n",
+      "Malatyaspor\n",
+      "Sivasspor\n",
+      "K. Erciyesspor\n",
+      "Fenerbahce\n",
+      "Genclerbirligi\n",
+      "Samsunspor\n",
+      "Konyaspor\n",
+      "Kayserispor\n",
+      "C. Rizespor\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, _ in enumerate(table):\n",
+    "    team_name = table[index].find_all(\"td\", {\"class\": \"no-border-links hauptlink\"})\n",
+    "    team_name = team_name[0].find_all(\"a\", {\"class\": \"vereinprofil_tooltip\"})\n",
+    "    print(team_name[0].text.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "a989e3f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<td class=\"zentriert\">1</td>,\n",
+       " <td class=\"zentriert\">1</td>,\n",
+       " <td class=\"zentriert\">0</td>,\n",
+       " <td class=\"zentriert\">0</td>,\n",
+       " <td class=\"zentriert\">3:2</td>,\n",
+       " <td class=\"zentriert\">1</td>,\n",
+       " <td class=\"zentriert\">3</td>]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_info = table[0].find_all(\"td\", {\"class\": \"zentriert\"})[1:]\n",
+    "score_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "4ca4ed9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "3:2\n",
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, _ in enumerate(score_info):\n",
+    "    print(score_info[index].text.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "569a917d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Gaziantepspor': ['1', '0', '0', '3:2', '1', '3']},\n",
+       " {'Trabzonspor': ['1', '0', '0', '2:1', '1', '3']},\n",
+       " {'Galatasaray': ['1', '0', '0', '2:1', '1', '3']},\n",
+       " {'Diyarbakirspor': ['1', '0', '0', '1:0', '1', '3']},\n",
+       " {'Ankaragücü': ['0', '1', '0', '2:2', '0', '1']},\n",
+       " {'Manisaspor': ['0', '1', '0', '2:2', '0', '1']},\n",
+       " {'Besiktas': ['0', '1', '0', '1:1', '0', '1']},\n",
+       " {'Denizlispor': ['0', '1', '0', '1:1', '0', '1']},\n",
+       " {'Ankaraspor': ['0', '1', '0', '1:1', '0', '1']},\n",
+       " {'Malatyaspor': ['0', '1', '0', '1:1', '0', '1']},\n",
+       " {'Sivasspor': ['0', '1', '0', '1:1', '0', '1']},\n",
+       " {'K. Erciyesspor': ['0', '1', '0', '1:1', '0', '1']},\n",
+       " {'Fenerbahce': ['0', '1', '0', '0:0', '0', '1']},\n",
+       " {'Genclerbirligi': ['0', '1', '0', '0:0', '0', '1']},\n",
+       " {'Samsunspor': ['0', '0', '1', '2:3', '-1', 0]},\n",
+       " {'Konyaspor': ['0', '0', '1', '1:2', '-1', 0]},\n",
+       " {'Kayserispor': ['0', '0', '1', '1:2', '-1', 0]},\n",
+       " {'C. Rizespor': ['0', '0', '1', '0:1', '-1', 0]}]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_information = []\n",
+    "\n",
+    "for index, _ in enumerate(table):\n",
+    "    score_dictionary = {}\n",
+    "    score_list = []\n",
+    "    team_name = table[index].find_all(\"td\", {\"class\": \"no-border-links hauptlink\"})\n",
+    "    team_name = team_name[0].find_all(\"a\", {\"class\": \"vereinprofil_tooltip\"})\n",
+    "    name = team_name[0].text.strip()\n",
+    "    \n",
+    "    score_info = table[index].find_all(\"td\", {\"class\": \"zentriert\"})[2:]\n",
+    "    for index, _ in enumerate(score_info):\n",
+    "        if score_info[index].text.strip() == '-':\n",
+    "            score_list.append(0)\n",
+    "        else:\n",
+    "            score_list.append(score_info[index].text.strip())\n",
+    "        \n",
+    "    score_dictionary[name] = score_list\n",
+    "    table_information.append(score_dictionary)\n",
+    "    \n",
+    "table_information"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd7a0d4",
+   "id": "8178feec",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "671adab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b35ffc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28aa1ede",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e7c35f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "d8bde398",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixture_url = 'https://www.transfermarkt.com/super-lig/spieltagtabelle/wettbewerb/TR1?saison_id=2005&spieltag=1'\n",
+    "season_requests = requests.get(fixture_url, headers={'User-agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:61.0) Gecko/20100101 Firefox/61.0'})\n",
+    "content = season_requests.content\n",
+    "soup = BeautifulSoup(content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "8a7efb26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Gaziantepspor': ['1', '0', '0', '3:2', '1', '3'],\n",
+       " 'Trabzonspor': ['1', '0', '0', '2:1', '1', '3'],\n",
+       " 'Galatasaray': ['1', '0', '0', '2:1', '1', '3'],\n",
+       " 'Diyarbakirspor': ['1', '0', '0', '1:0', '1', '3'],\n",
+       " 'Ankaragücü': ['0', '1', '0', '2:2', '0', '1'],\n",
+       " 'Manisaspor': ['0', '1', '0', '2:2', '0', '1'],\n",
+       " 'Besiktas': ['0', '1', '0', '1:1', '0', '1'],\n",
+       " 'Denizlispor': ['0', '1', '0', '1:1', '0', '1'],\n",
+       " 'Ankaraspor': ['0', '1', '0', '1:1', '0', '1'],\n",
+       " 'Malatyaspor': ['0', '1', '0', '1:1', '0', '1'],\n",
+       " 'Sivasspor': ['0', '1', '0', '1:1', '0', '1'],\n",
+       " 'Erciyesspor': ['0', '1', '0', '1:1', '0', '1'],\n",
+       " 'Fenerbahce': ['0', '1', '0', '0:0', '0', '1'],\n",
+       " 'Genclerbirligi': ['0', '1', '0', '0:0', '0', '1'],\n",
+       " 'Samsunspor': ['0', '0', '1', '2:3', '-1', 0],\n",
+       " 'Konyaspor': ['0', '0', '1', '1:2', '-1', 0],\n",
+       " 'Kayserispor': ['0', '0', '1', '1:2', '-1', 0],\n",
+       " 'Rizespor': ['0', '0', '1', '0:1', '-1', 0]}"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_information = {}\n",
+    "all = soup.find_all(\"table\")\n",
+    "table = all[4].find_all(\"tr\")\n",
+    "table = table[1:]\n",
+    "\n",
+    "for index, _ in enumerate(table):\n",
+    "    score_list = []\n",
+    "    team_name = table[index].find_all(\"td\", {\"class\": \"no-border-links hauptlink\"})\n",
+    "    team_name = team_name[0].find_all(\"a\", {\"class\": \"vereinprofil_tooltip\"})\n",
+    "    name = team_name[0].text.strip()\n",
+    "    name = name.split('.')[-1].strip()\n",
+    "\n",
+    "    score_info = table[index].find_all(\"td\", {\"class\": \"zentriert\"})[2:]\n",
+    "    for index, _ in enumerate(score_info):\n",
+    "        if score_info[index].text.strip() == '-':\n",
+    "            score_list.append(0)\n",
+    "        else:\n",
+    "            score_list.append(score_info[index].text.strip())\n",
+    "\n",
+    "    table_information[name] = score_list\n",
+    "\n",
+    "table_information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb75ed6f",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
